# aerofoil

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  deny.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  rust.yml
benches/: allocation_tracking.rs  publication_latency.rs  subscription_throughput.rs  transceiver.rs
benches/common/: generic.rs  mod.rs
docs/: architecture.md  development-guide.md
examples/: dual_rc_pattern.rs  fan_out_pattern.rs  inverted_control_idle_strategy.rs  inverted_control_publisher.rs  subscriber_node_reference_access.rs  subscriber_node_value_access.rs
openspec/: integration-test.md  mocking.md  project.md
openspec/changes/add-aeron-rs-adapter/: proposal.md  tasks.md
openspec/changes/add-aeron-transport/: design.md  proposal.md  tasks.md
openspec/changes/add-dual-backend-support/: design.md  tasks.md
openspec/changes/add-github-actions-ci-cd/: proposal.md  tasks.md
openspec/changes/add-rusteron-adapter/: design.md  proposal.md  tasks.md
openspec/changes/add-stream-peek-value-strategy/: design.md  proposal.md
openspec/changes/add-subscriber-node-builder/: proposal.md  tasks.md
openspec/changes/add-summing-node-test/: proposal.md  tasks.md
openspec/changes/add-transport-benchmarks/: design.md  proposal.md  tasks.md
openspec/changes/add-transport-traits/: design.md  proposal.md  tasks.md
openspec/changes/allow-dual-backends/: proposal.md  tasks.md
openspec/changes/archive/2025-11-23-add-transport-traits/: design.md  proposal.md
openspec/changes/archive/2025-11-27-add-summing-node-test/: tasks.md
openspec/changes/archive/2025-12-01-refactor-to-peek-based-nodes/: proposal.md  tasks.md
openspec/changes/refactor-subscriber-builder-into/: proposal.md  tasks.md
openspec/changes/remove-code-from-comments/: tasks.md
openspec/specs/aeron-rs-adapter/: spec.md
openspec/specs/documentation-conventions/: spec.md
openspec/specs/peek-based-composition/: spec.md
openspec/specs/peek-value-pattern/: spec.md
openspec/specs/subscriber-node-builder/: spec.md
openspec/specs/sum-count-publisher-test/: spec.md
openspec/specs/summing-node-integration/: spec.md
openspec/specs/transport-traits/: spec.md
src/: lib.rs
src/nodes/: builder.rs  mod.rs  publisher.rs  source.rs  subscriber.rs
src/transport/: buffer.rs  channel.rs  discovery.rs  error.rs  mock.rs  mod.rs  tests.rs
src/transport/aeron_rs/: error.rs  mod.rs  publisher.rs  subscriber.rs
src/transport/rusteron/: error.rs  media_driver.rs  mod.rs  publisher.rs  subscriber.rs
tests/: counting_node_value_test.rs  sum_count_publisher_test.rs  summing_node_test.rs
tests/common/: mod.rs
(+35 files in other folders)
