[package]
name = "aerofoil"
version = "0.1.0"
edition = "2021"

[dependencies]
rusteron-client = "0.1"
rusteron-media-driver = { version = "0.1", optional = true }
wingfoil = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
dhat = "0.3"

[features]
default = []
embedded-driver = ["rusteron-media-driver"]
external-driver = []
dhat-heap = []

[[bench]]
name = "publication_latency"
harness = false

[[bench]]
name = "subscription_throughput"
harness = false

[[bench]]
name = "transceiver"
harness = false

[[bench]]
name = "allocation_tracking"
harness = false
