[package]
name = "aerofoil"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Wingfoil adapters for Aeron messaging — zero-copy, low-latency transport"
repository = "https://github.com/olibye/aerofoil"
readme = "README.md"
keywords = ["aeron", "messaging", "wingfoil", "hft", "zero-copy"]
categories = ["network-programming"]
include = [
    "src/**/*",
    "build.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "docs/**/*",
    "examples/**/*",
    "tests/**/*",
    "benches/**/*",
]

[package.metadata.docs.rs]
features = ["embedded-driver"]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.100"
rusteron-client = "0.1"
rusteron-media-driver = { version = "0.1", optional = true }
wingfoil = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
dhat = "0.3"
tokio = { version = "1", features = ["rt"] }

[features]
default = []
embedded-driver = ["rusteron-media-driver"]
external-driver = []
dhat-heap = []

[[bench]]
name = "publication_latency"
harness = false

[[bench]]
name = "subscription_throughput"
harness = false

[[bench]]
name = "transceiver"
harness = false

[[bench]]
name = "allocation_tracking"
harness = false
